fixed z-index to show identify and flashes in front of the sidebar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@
 #waiting
 	{position:fixed; top:0px; left:0px; height:100%; width:100%; background-color:lightgray; opacity:0.4; background-position:center; background-image:url(/images/waiting.gif); background-repeat:no-repeat; z-index:90;}
 #identify
-	{position:fixed; left:15%; right:15%; top:35%; bottom:35%; opacity:0.7; border-radius:30px; padding:50px; color:white; font-size:3em; text-align:center;}
+	{position:fixed; left:15%; right:15%; top:35%; bottom:35%; opacity:0.7; border-radius:30px; padding:50px; color:white; font-size:3em; text-align:center; z-index:100;}
 
 body
 	{font-family:sans-serif; background: white; margin:130px 20px 20px 20px; font-size:1.75em; overflow:hidden;}
@@ -16,7 +16,7 @@ body
 #beamer-controls
 	{position:fixed; top:0px; right:20px; height:18px; background-color:#cccccc; border-bottom-left-radius:5px; border-bottom-right-radius:5px; padding:2px; opacity:0.8;}
 #flashs
-	{position:fixed; top:110px; left:0px; width:100%; opacity:0.7;}
+	{position:fixed; top:110px; left:0px; width:100%; opacity:0.7; z-index:80;}
 #flashs>div
 	{height:40px;}
 #currentTime
